# chatbot-pisos-turisticos

./: .gitignore  README.md  pyproject.toml
app/: business_logic.py  database.py  main.py  memory.py  models.py  nlu.py  prueba.py
app/categorias/: averia_estancia.py  informacion_alojamiento.py  manejo_limpieza.py  recomendaciones.py  servicios_adicionales.py
app/categorias/servicios/: limpiezas.py  transporte.py
app/categorias/tipo_de_recomendacion/: actividades_ocio.py  recomendaciones_restaurantes.py  transporte_movilidad.py
app/categorias/tipo_informacion/: handle_instalaciones.py  handle_normas.py  handle_penalizaciones.py
